--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="nav-content">
           <ul class="tabs tabs-transparent text-center">
-            <form action="uploadFile.php" method="post" enctype="multipart/form-data">
+            <form action="php/uploadFile.php" method="post" enctype="multipart/form-data">
             <li class="tab"><a id="upload_link"><i class="material-icons">file_upload</i></a>
               <input type="file" id="input_csv" onchange="init()" />
             </form>
