--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="nav-content">
           <ul class="tabs tabs-transparent text-center">
-            <form action="php/fileUpload.php" method="post" enctype="multipart/form-data">
+            <form action="php/uploadFile.php" method="post" enctype="multipart/form-data">
               SELECT
              <input type="file" name"filetoUpload" id=fileToUpload">
               <input type="submit" value="Upload Image" name="submit">
