fixed fileid problem

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
           <ul class="tabs tabs-transparent text-center">
             <form action="php/uploadFile.php" method="post" enctype="multipart/form-data">
               SELECT
-             <input type="file" name"filetoUpload" id=fileToUpload">
+             <input type="file" name"fileToUpload" id=fileToUpload">
               <input type="submit" value="Upload Image" name="submit">
             </form>
             <li class="tab"><a id="upload_link"><i class="material-icons">file_upload</i></a>
