--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
- <form action="php/upload-manager.php" method="post" enctype="multipart/form-data">
+ <form action="php/list.php" method="post" enctype="multipart/form-data">
         <h2>Upload File</h2>
         <label for="fileSelect">Filename:</label>
         <input type="file" name="photo" id="fileSelect">
