--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
- <form action="php/upload_manager.php" method="POST" enctype="multipart/form-data">
+ <form action="upload-php.herokuapp.com/upload_manager.php" method="POST" enctype="multipart/form-data">
         <h2>Upload File</h2>
         <label for="fileSelect">Filename:</label>
         <input type="file" name="photo" id="fileSelect">
